--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇭🇰 香港-2.12MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇯🇵 日本-1.70MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-192.3KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-2.93MB/s(Youtube:不良林), server: 85.208.108.94, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇯🇵 日本-1011.4KB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇨🇳 中国-1.39MB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
-  - {name: 🇯🇵 日本-2.09MB/s(Youtube:不良林), server: 85.208.108.94, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-2.49MB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇸🇬 新加坡-309.9KB/s(Youtube:不良林), server: 194.124.35.40, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-709.6KB/s(Youtube:不良林), server: 85.208.108.94, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-3.12MB/s(Youtube:不良林), server: 85.208.108.94, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-1.95MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇯🇵 日本-1.69MB/s(Youtube:不良林), server: 85.208.108.94, port: 5600, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.44MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇸🇬 新加坡-1.86MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.61MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 香港-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-709.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇭🇰 香港-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-709.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇭🇰 香港-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-709.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇭🇰 香港-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-709.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇭🇰 香港-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-709.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 香港-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-709.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇭🇰 香港-2.12MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.70MB/s(Youtube:不良林)
+      - 🇺🇸 美国-192.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-1011.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.39MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.09MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-394.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.49MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-309.9KB/s(Youtube:不良林)
-      - 🇯🇵 日本-709.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.95MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.69MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.44MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.86MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.61MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.03MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
