--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-927.7KB/s(Youtube:不良林), server: 85.208.108.94, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-2.42MB/s(Youtube:不良林), server: 85.208.108.94, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇯🇵 日本-1.75MB/s(Youtube:不良林), server: 85.208.108.94, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-1.36MB/s(Youtube:不良林), server: 85.208.108.94, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-1.88MB/s(Youtube:不良林), server: 85.208.108.94, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇯🇵 日本-1.44MB/s(Youtube:不良林), server: 85.208.108.94, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇯🇵 日本-2.84MB/s(Youtube:不良林), server: 85.208.108.94, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-2.06MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇯🇵 日本-1.21MB/s(Youtube:不良林), server: 85.208.108.94, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
-  - {name: 🇯🇵 日本-2.35MB/s(Youtube:不良林), server: 85.208.108.94, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇯🇵 日本-1.72MB/s(Youtube:不良林), server: 85.208.108.94, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.57MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.37MB/s(Youtube:不良林), server: 85.208.108.94, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇯🇵 日本-1.08MB/s(Youtube:不良林), server: 85.208.108.94, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.46MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇫🇷 法国-1.18MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-927.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-927.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-927.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-927.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-927.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-927.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-927.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.42MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.75MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.36MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.88MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.44MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.84MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.06MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.35MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.72MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.57MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.37MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.08MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.46MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.18MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-548.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
